fix: alignment bug in eventcard

--- a/src/components/card/EventCard/eventCard.css
+++ b/src/components/card/EventCard/eventCard.css
@@ -4,6 +4,8 @@
   min-width: 246px;
   border-radius: 10px;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 #calendar-widget > .widget-layout .event-card {
